infrastructure/security/gatekeeper/constraint-templates/disallow-latest-tag.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate

metadata:
  name: k8sdisallowlatest

spec:
  crd:
    spec:
      names:
        kind: K8sDisallowLatest

  targets:
    - target: admission.k8s.gatekeeper.sh

      rego: |
        package k8sdisallowlatest

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          endswith(container.image, ":latest")
          msg := sprintf("Container %v must not use the latest image tag", [container.name])
        }
